# MarketPulse

./: .dockerignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml
MarketPulse/: asgi.py  celery.py  health_check.py  settings.py  urls.py  wsgi.py
apps/accounts/: models.py  serializers.py  urls.py  views.py
apps/alerts/: models.py  serializers.py  tasks.py  test_alerts.py  urls.py  views.py
apps/alerts/migrations/: 0001_initial.py  0002_alter_alert_notification_method.py
apps/stocks/: models.py  serializers.py  tasks.py  test_stocks.py  urls.py  views.py
apps/stocks/management/commands/: seed_stocks.py
apps/stocks/migrations/: 0001_initial.py  0002_rename_sector_stock_type_remove_stock_industry.py
docs/: MarketPulse API.postman_collection.json
